(fix feed on safari)

--- a/src/app/features/home/components/feed-item/feed-item.component.scss
+++ b/src/app/features/home/components/feed-item/feed-item.component.scss
@@ -63,18 +63,25 @@
     }
 
     .feed-item-body {
-      .main-image {
-        min-height: 200px;
-        transition: filter .25s ease-in-out;
+      .main-image-container {
+        display: flex;
 
-        @media (hover: hover) and (pointer: fine) {
-          &:hover {
-            filter: brightness(1.25);
+        .main-image {
+          min-height: 200px;
+          transition: filter .25s ease-in-out;
+          flex: 1;
+          width: auto;
+          display: block;
+
+          @media (hover: hover) and (pointer: fine) {
+            &:hover {
+              filter: brightness(1.25);
+            }
           }
-        }
 
-        @media (min-width: $md-min) {
-          height: 250px;
+          @media (min-width: $md-min) {
+            height: 250px;
+          }
         }
       }
     }
